--- a/src/app/pages/login/login/login.component.scss
+++ b/src/app/pages/login/login/login.component.scss
@@ -28,7 +28,7 @@
 
         form {
             width: 100%;
-            max-width: 400px; // Para no extender demasiado el formulario
+            max-width: 400px; 
             display: flex;
             flex-direction: column;
             gap: 3rem;
